--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "prova2bimbcclp2",
   "version": "0.1.0",
+  "homepage": "https://magnus012.github.io/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
@@ -21,6 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
